cargo-features = ["codegen-backend"]
[package]
name = "rs-s3-local"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "s3-server"

[dependencies]
ntex = { version = "1", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ntex-cors = "1.0.0"
env_logger = "0.11.3"
derive_more = "0.99.17"
log = "0.4.20"
rayon = "1.8"
anyhow = "1.0.81"
thiserror = "1.0.58"
sha2 = "0.10.8"
zstd = "0.13.0"
hex = "0.4.3"
futures = "0.3.30"
mimalloc = { version = "0.1.39", default-features = false }
chrono = { version = "0.4.35", features = ["serde","rkyv-64", "rkyv-validation"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
mime_guess = "2.0.4"
uuid = { version = "1.8.0", features = ["v4"] }
crypto-hash = "0.3.4"
hmac = "0.12.1"
url = "2.5.0"
rand = "0.9.0-alpha.1"
base64 = "0.22.0"
aes = "0.7.5"
block-modes = "0.8.1"
rkyv = { version = "0.7.44", default-features = false, features = ["std","size_64","validation", "bytecheck","alloc"] }

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
