cargo-features = ["codegen-backend"]
[package]
name = "rs-s3-local"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "s3-server"
path = "src/bin/s3-server.rs"

[dependencies]
ntex = { version = "2", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ntex-cors = "2"
env_logger = "0.11.3"
derive_more = {version="1", features=["full"]}
log = "0.4.20"
rayon = "1.8"
anyhow = "1.0.81"
thiserror = "1.0.58"
sha2 = "0.10.8"
zstd = "0.13.0"
hex = "0.4.3"
futures = "0.3.30"
mimalloc = { version = "0.1.39", default-features = false }
chrono = { version = "0.4.35", features = ["serde","rkyv-64", "rkyv-validation"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
mime_guess = "2.0.4"
uuid = { version = "1.8.0", features = ["v4"] }
crypto-hash = "0.3.4"
hmac = "0.12.1"
url = "2.5.0"
rand = "0.9.0-alpha.1"
base64 = "0.22.0"
aes = "0.7.5"
block-modes = "0.8.1"
rkyv = { version = "0.7.44", default-features = false, features = ["std","size_64","validation", "bytecheck","alloc"] }
openraft = { version = "0.9.5", features = ["serde", "storage-v2"] }
byteorder = "1.4.3"
clap = { version = "4.1.11", features = ["derive", "env"] }
reqwest = { version = "0.11.9", features = ["json"] }
sled = "0.34.7"
volo.workspace = true
volo-gen = { path = "./volo-gen" }
volo-thrift.workspace = true
pilota.workspace = true
postcard = { version = "1.0.7", features = ["use-std"] }
memmap2 = "0.9.4"
reed-solomon-simd = "2.2.2"
parking_lot = "0.12.3"

[workspace]
members = ["volo-gen"]
resolver = "2"
[workspace.package]
edition = "2021"
[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-build = "*"
volo-thrift = "*"
pilota = "*"
anyhow = "1.0.82"
tokio = { version = "1.35.1", features = ["full"] }
[dev-dependencies]
maplit = "1.0.2"
tempfile = { version = "3.4.0" }

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
